Fix crash with missing midi_settings

fActiveSoundFont wasn't initialized when there's no midi_settings file.
Don't allocate it on the heap, the object get implicitely initialized to
an emtpy string.
Tiny style fix.
Thanks to AnEvilYak for his consultation.

Fixes #13402.